--- a/.projects.json
+++ b/.projects.json
@@ -212,6 +212,14 @@
                   {"type":"PYLIB"}]
 },
 {
+    "name":"KaoTry",
+    "path":{"envVar":"kao_gen_dir",
+            "path":"KaoTry"},
+    "extensions":[{"type":"GIT",
+                   "url":"git@github.com:cloew/KaoTry"},
+                  {"type":"PYLIB"}]
+},
+{
     "name":"KaoXML",
     "path":{"envVar":"kao_data_dir",
             "path":"KaoXML",
