--- a/.projects.json
+++ b/.projects.json
@@ -113,6 +113,14 @@
                   {"type":"PYLIB"}]
 },
 {
+    "name":"KaoGenerator",
+    "path":{"envVar":"kao_gen_dir",
+            "path":"KaoGenerator"},
+    "extensions":[{"type":"GIT",
+                   "url":"git@github.com:cloew/KaoGenerator"},
+                  {"type":"PYLIB"}]
+},
+{
     "name":"KaoGUI",
     "path":{"envVar":"kao_ui_dir",
             "path":"KaoGUI"},
