--- a/.projects.json
+++ b/.projects.json
@@ -156,8 +156,7 @@
 {
     "name":"KaoModules",
     "path":{"envVar":"kao_gen_dir",
-            "path":"KaoModules",
-            "srcPath":"src"},
+            "path":"KaoModules"},
     "extensions":[{"type":"GIT",
                    "url":"git@github.com:cloew/KaoModules"},
                   {"type":"PYLIB"}]
