Added flexconfig to the projects json

--- a/.projects.json
+++ b/.projects.json
@@ -8,6 +8,14 @@
                   {"type":"PYLIB"}]
 },
 {
+    "name":"flexconfig",
+    "path":{"envVar":"kao_data_dir",
+            "path":"flexconfig"},
+    "extensions":[{"type":"GIT",
+                   "url":"git@github.com:cloew/flexconfig"},
+                  {"type":"PYLIB"}]
+},
+{
     "name":"KaoCommand",
     "path":{"envVar":"kao_lib_dir",
             "path":"KaoCommand"},
