--- a/.projects.json
+++ b/.projects.json
@@ -16,6 +16,14 @@
                   {"type":"PYLIB"}]
 },
 {
+    "name":"proxyattrs",
+    "path":{"envVar":"kao_gen_dir",
+            "path":"ProxyAttrs"},
+    "extensions":[{"type":"GIT",
+                   "url":"git@github.com:cloew/proxy-attrs"},
+                  {"type":"PYLIB"}]
+},
+{
     "name":"KaoCommand",
     "path":{"envVar":"kao_lib_dir",
             "path":"KaoCommand"},
@@ -126,6 +134,14 @@
             "path":"KaoFn"},
     "extensions":[{"type":"GIT",
                    "url":"git@github.com:cloew/KaoFn"},
+                  {"type":"PYLIB"}]
+},
+{
+    "name":"KaoFormula",
+    "path":{"envVar":"kao_data_dir",
+            "path":"KaoFormula"},
+    "extensions":[{"type":"GIT",
+                   "url":"git@github.com:cloew/KaoFormula"},
                   {"type":"PYLIB"}]
 },
 {
