--- a/.projects.json
+++ b/.projects.json
@@ -242,6 +242,14 @@
                   {"type":"PYLIB"}]
 },
 {
+    "name":"KaoSetlist",
+    "path":{"envVar":"kao_dir",
+            "path":"KaoSetlist",
+            "srcPath":"src"},
+    "extensions":[{"type":"GIT",
+                   "url":"git@github.com:cloew/KaoSetlist"}]
+},
+{
     "name":"KaoSequence",
     "path":{"envVar":"kao_gen_dir",
             "path":"KaoSequence"},
